Closed Bug 832018 Opened 11 years ago Closed 11 years ago

DASH: Fix for 804372 breaks nestegg_get_cue_point

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: sworkman, Assigned: sworkman)

Details

Attachments

(1 file)

A track_number to track_id mapping was introduced in Bug 804372 for nestegg. The patch did not update nestegg_get_cue_point, so the WebM files with track numbers other than 1 do not work in DASH.
Attachment #703596 - Flags: review?(kinetik) → review+
https://hg.mozilla.org/mozilla-central/rev/3d6b1d730030
Assignee: nobody → sworkman
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: