Bug 832018 - Use ne_map_track_number_to_index in nestegg_get_cue_point r=kinetik